--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>机场名字[要修改]</title>
+    <title>NetworkGo</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta name="description" content="机场描述[要修改]" />
+    <meta name="description" content="NetworkGo永远是你坚强的后盾" />
     
         <link rel="icon" href="/theme/aurora/favicon.svg" />
         <link rel="icon" href="" />
@@ -143,8 +143,8 @@
         showRegInvite: 'show',
         appTheme: 'auto',
         appColor: 'default',
-        appName: '机场名字[要修改]',
-        appDesc: `机场描述[要修改]`,
+        appName: 'NetworkGo',
+        appDesc: `NetworkGo永远是你坚强的后盾`,
         appLogo: '',
         appVersion: '1.7.3.1672843907081',
         clientIOS: '',
